--- a/index.html
+++ b/index.html
@@ -1,58 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Poly Founders</title>
-		<!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		
-	</head>
-	<body>
-        <header>
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <h1>POLYFOUNDERS</h1>
-        <!----Insert poly founders logo img--->
-        <h2>Making Awesome Happen</h2>
-                <ul>
-                    <li>About</li>
-                    <li role="presentation" class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                            Events <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                        HackPoly
-                        </ul>
-                    </li>
-                    <li>Calendar</li><!--Link to Eventbrite-->
-                    <li>Blog</li>
-                    <li>Contact</li>
-                </ul>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
+
+    <title>Poly Founders</title>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,300italic,700' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+    <!-- Custom styles for this template -->
+    <link href="style.css" rel="stylesheet">
+  </head>
+<!-- NAVBAR================================================== -->
+  <body>
+    <div class="navbar-wrapper" id="navbar-wrap">
+      <div class="container-nav" id="index">
+
+        <nav class="navbar navbar-inverse navbar-static-top">
+          <div class="container-list">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="http://polyfounders.com"><img src="images/logo-white.jpg" height="40" width="300"><span style="padding-left:4px;">Making Awesome Happen</span></a>
             </div>
-            </nav>
-        </header>
-        <!----Carousel of Imgs---->
-        <div class="about">
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Events <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="http://hackpoly.com">HackPoly</a></li>
+                    <li><a href="#">Bronco Startup Challenge</a></li>
+                  </ul>
+                </li>
+                  <li><a href="mailto:simal@polyfounders.org">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+
+      </div>
+    </div>
+
+
+    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="images/carousel.png" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p> <!--Link to mailchimp subscription form! -->
+            </div>
+          </div>
         </div>
-        <div class="events">
-            <div>Bronco Startup Challenge</div>
-            <div>HackPoly</div>
-            <div>Many More Events...</div>
+        <div class="item">
+          <img class="second-slide" src="images/idea.png" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Welcome to Poly Founders</h1>
+              <p>Poly Founders is a multi-disciplinary organization for entrepreneurs based at Cal Poly Pomona. </p>
+              <p><a class="btn btn-lg btn-primary" href="#about" role="button">Learn more</a></p>
+            </div>
+          </div>
         </div>
-        <div class=subscribe>
-            <h3>Interested? </h3>
-            <p>We meet every Thursday in Room 163-1004 at U-hour (12-1pm)</p>
-           <h4>Subscribe to our Bi-Weekly Newsletter!</h4>
+        <div class="item">
+          <img class="third-slide" src="images/group.jpg" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption">
+                <h2>Meetings Every Thursday at 163-1004 at U-hour!</h2>
+                <p>Drop by our meetings to see what we're all about!</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Join Us</a></p>
+            </div>
+          </div>
         </div>
-        <footer class="contact">
-            <!-- Facebook, Twitter, Instagram, Email, Calendar Social Media Icons-->
-            Copyright 2015 Poly Founders
-        </footer>
-    </body>
-    </html>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->
+
+
+    <!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+
+    <div class="container marketing">
+      <!-- START THE FEATURETTES -->
+      <div class="row featurette" id='about'>
+        <div class="col-md-12" align="center">
+          <h2 class="featurette-heading">About Us<br/><span class="text-muted">What is Poly Founders?</span></h2>
+          <p class="lead">Founded in January 2012, Poly Founders was created with the purpose of connecting young entrepreneurs of all backgrounds under a common roof. While Cal Poly Pomona is our home, we welcome students, alumni, and professionals from all universities and organizations.<br/><br/>
+            Poly Founders works with budding entrepreneurs, exceptional students, and prominent professors in order to unite the worlds of entrepreneurship, academia, and industry.We develop entrepreneurs by offering the resources, knowledge, and network they need without oversight.</p>
+        </div>
+      </div>
+
+        <div class="row featurette" id='events'>
+         <h2 class="featurette-heading" align="center">Events <br/> <span class="text-muted">What do we do?</span></h2>
+            <br/><br/>
+        <!-- Three columns of text below the carousel -->
+        <div class="row">
+        <div class="col-lg-4">
+          <img class="img-circle" src="images/hackpoly.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>HackPoly</h2>
+          <p>Cal Poly Pomona's annual collegiate hackathon. A 24-hour invention competition to create anything. </p>
+          <p><a class="btn btn-default" href="http://hackpoly.com" target="_blank" role="button">View Website &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="images/bsc.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>Bronco Startup Challenge</h2>
+          <p>An annual competition where Cal Poly Pomona students build business plans and pitch their startup ideas to a panel of judges for $11,000 in cash prize.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="images/about.jpg" alt="Generic placeholder image" width="140" height="140">
+          <h2>Other Events</h2>
+          <p>We also hold Special Talks with CEOs, attend Tech Crawls, and many more awesome events. Check out our Calendar for these events! </p>
+          <p><a class="btn btn-default" href="http://www.eventbrite.com/o/poly-founders-2764871564" role="button">View Calendar &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+        </div>
+        
+      <div class="row featurette" id="join">
+        <div class="col-md-12" align="center">
+          <h2 class="featurette-heading">Come and Join us! <br/> <span class="text-muted">Where are we?</span></h2>
+          <p class="meet" align="center">We meet every Thursday in Building 163, Room 1004 at U-hour (12-1pm).</p>
+        </div>
+      </div>
+    </div><!-- /.container -->
+      <!-- /END THE FEATURETTES -->
+
+
+      <!-- FOOTER -->
+      <footer>
+          <a href="#index"><div class="pull-right glyphicon glyphicon-chevron-up"></div></a>
+            <p>&copy; 2015 Poly Founders. &middot; All Rights Reserved</p>
+          <div class="social">
+          <a href="https://www.facebook.com/PolyFounders"><img class="icon" src="images/facebook_square_black-128.png"></a>
+            <a href="mailto:simal@polyfounders.org"><img class="glyphicon glyphicon-envelope"></a>
+              <a href="http://instagram.com/polyfounders"><img  class="icon" src="images/instagram_square_black-512.png"></a>
+            <a href="https://twitter.com/polyfounders"><img class="icon" src="images/twitter.png"></a>
+            <a href="http://polyfounders.eventbrite.com"><img class="icon" src="images/classica_globe-2_flat-square-white-on-black_512x512.png"></a>
+          </div>
+      </footer>
+
+
+
+  </body>
+</html>
