add subscribe button

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	        <img src="images/logo.png">
 	        </div>
 	        <div class="col-xs-6 col-xs-offset-2 text-right">
-	          <a href="#">Home</a>
-	          <a href="#">About</a>
+	          <a href="/">Home</a>
+	          <a href="#about">About</a>
 	          <a href="#">Events</a>
-	          <a href="#">Blog</a>
-	          <a href="#">Contact</a>
+						<!--<a href="#">Blog</a>-->
+	          <a href="mailto:info@polyfounders.com">Contact</a>
 	        </div>
         </div>
     	</div>
@@ -52,6 +52,8 @@
     	</div>
     </div>
 
+    <a href="http://eepurl.com/ucOy1" class="btn btn-primary btn-lg" target="_blank">Subscribe</a>
+
     <div class="feature text-center">
     	<div class="container">
     		<div class="row">
@@ -71,7 +73,7 @@
     	</div>
     </div>
 
-    <div class="about">
+    <div class="about" id="about">
     	<div class="container">
     		<div class="row">
     			<h2>Our Story</h2>
