--- a/index.html
+++ b/index.html
@@ -6,47 +6,51 @@
 	<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css", rel="stylesheet">
   <title>Poly Founders</title>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet' type='text/css'>
   </head>
 
 
   <body>
-  	<nav class="navbar navbar-default navbar-fixed-top">
-    	<div class="container">
-        <div class="row">
-	        <div class="col-xs-4">
-	        <img src="images/logo.png">
-	        </div>
-	        <div class="col-xs-6 col-xs-offset-2 text-right">
-	          <a href="/">Home</a>
+    <nav class="navbar navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="http://www.polyfounders.com"><img src='images/logo-white.jpg'></a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <div class="navbar-right">
+            <a href="/">Home</a>
 	          <a href="#about">About</a>
 	          <a href="#">Events</a>
 						<!--<a href="#">Blog</a>-->
 	          <a href="mailto:info@polyfounders.com">Contact</a>
-	        </div>
-        </div>
-    	</div>
+        </div><!--/.navbar-collapse -->
+      </div>
     </nav>
+
 
 		<div class="jumbotron text-center">
       <div class="container">
-        <div class="row">
-          <h2>Poly Founders</h2>
-          <h1>Join fellow entrepreneurs.</h1>
-          <a href="http://eepurl.com/ucOy1" class="btn btn-primary btn-lg" target="_blank">Subscribe</a>
-        </div>
+        <h1>Join fellow entrepreneurs.</h1>
+        <a href="http://eepurl.com/ucOy1" class="btn btn-primary btn-lg" target="_blank">Subscribe</a>
       </div>
     </div>
 
-    <div class="welcome cust-pad">
+    <div class="welcome text-center cust-pad">
     	<div class="container">
     		<div class="row">
-    			<div class="col-md-8 text-left">
+    			<div class="col-md-8">
     			<h3>Welcome to the Official Poly Founders website.</h3>
     			</div>
-    			<div class="col-md-4 text-right">
-    			<h4>Meetings Thursday
-    			NOON @ 163-1004</h4>
+    			<div class="col-md-4">
+    			<p>Our meetings are every Thursday</p>
+    			<p>NOON @ 163-1004</p>
     			</div>
     		</div>
     	</div>
@@ -77,7 +81,7 @@
     		<div class="row">
     			<h2>Our Story</h2>
     			<p>Founded in January 2012, Poly Founders was created with the purpose of connecting young entrepreneurs of all backgrounds under a common roof. While Cal Poly Pomona is our home, we welcome students, alumni, and professionals from all universities and organizations.
-          Poly Founders works with budding entrepreneurs, exceptional students, and prominent professors in order to unite the worlds of entrepreneurship, academia, and industry.We develop entrepreneurs by offering the resources, knowledge, and network they need without oversight.</p>
+          Poly Founders works with budding entrepreneurs, exceptional students, and prominent professors in order to unite the worlds of entrepreneurship, academia, and industry. We help entrepreneurs by offering our resources, knowledge, and network.</p>
     		</div>
     	</div>
     </div>
@@ -86,10 +90,10 @@
     	<div class="container">
     		<div class="row">
 	    		<div class="col-md-8">
-	    		<p>Cal Poly Pomona's annual collegiate hackathon. A 24-hour invention competition to create anything.</p>
+	    		<p>Hackpoly is Cal Poly Pomona's annual hackathon put on by Poly Founders. It is a 24-hour programming competition to build anything.</p>
 	    		</div>
-	    		<div class="col-md-4 text-right">
-	    		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+	    		<div class="col-md-4 text-center">
+	    		<p><a class="btn btn-primary btn-lg" href="http://www.hackpoly.com" role="button">Learn more</a></p>
 	    		</div>
     		</div>
     	</div>
