add images and stuff

--- a/index.html
+++ b/index.html
@@ -54,19 +54,35 @@
 
 
     <div class="feature text-center">
-    	<div class="container">
+    	<div class="container-fluid">
     		<div class="row">
-	    		<div class="col-md-3">
-	    		<h2>Learn</h2>
+	    		<div class="col-sm-3 four-pts" id="learn-block">
+            <div class="overlay"></div>
+            <h2>Learn</h2>
+            <p>
+              Life is about learning new things. In this case, we teach you the basics of what it takes to be an entrepreneur, pitching your ideas, as well as many other awesome things.
+            </p>
 	    		</div>
-	    		<div class="col-md-3">
-	    		<h2>Do</h2>
+	    		<div class="col-sm-3 four-pts" id="do-block">
+            <div class="overlay"></div>
+            <h2>Do</h2>
+            <p>
+              Participate in our club activities and events. We host workshops and big events where major prizes are involved.
+            </p>
 	    		</div>
-	    		<div class="col-md-3">
-	    		<h2>Hack</h2>
+	    		<div class="col-sm-3 four-pts" id="hack-block">
+            <div class="overlay"></div>
+            <h2>Hack</h2>
+            <p>
+              It's not about what you know, but who you know. We at Poly Founders have a large network of professionals who will potentially get you to where you want to be.
+            </p>
 	    		</div>
-	    		<div class="col-md-3">
-	    		<h2>Network</h2>
+	    		<div class="col-sm-3 four-pts" id="network-block">
+            <div class="overlay"></div>
+            <h2>Network</h2>
+            <p>
+              We host two of Cal Poly Pomona's largest events: Bronco Startup Challenge and Hackpoly. Compete and win prizes and money. Not only that, learn new things and make new friends in the process!
+            </p>
 	    		</div>
     		</div>
     	</div>
