fix jumbotron thingy

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 
 		<div class="jumbotron text-center">
+      <div class="overlay"></div>
       <div class="container">
         <h1>Join fellow entrepreneurs.</h1>
         <a href="http://eepurl.com/ucOy1" class="btn btn-primary btn-lg" target="_blank">Subscribe</a>
