--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
 	<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css", rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <title>Poly Founders</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet' type='text/css'>
@@ -16,21 +17,19 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <i class="fa fa-bars"></i>
           </button>
           <a href="http://www.polyfounders.com"><img src='images/logo-white.jpg'></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <div class="navbar-right">
-            <a href="/">Home</a>
-	          <a href="#about">About</a>
-	          <a href="#">Events</a>
-						<!--<a href="#">Blog</a>-->
-	          <a href="mailto:info@polyfounders.com">Contact</a>
-        </div><!--/.navbar-collapse -->
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="mailto:info@polyfounders.com">Contact</a></li>
+          </ul>
+        </div>
       </div>
     </nav>
 
@@ -142,5 +141,7 @@
 	 	 	</div>
   	</div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
 </html>
