--- a/index.html
+++ b/index.html
@@ -106,8 +106,23 @@
 	    		<div class="col-md-8">
 	    		<p>Hackpoly is Cal Poly Pomona's annual hackathon put on by Poly Founders. It is a 24-hour programming competition to build anything.</p>
 	    		</div>
+          <br>
 	    		<div class="col-md-4 text-center">
-	    		<p><a class="btn btn-primary btn-lg" href="http://www.hackpoly.com" role="button">Learn more</a></p>
+	    		<p><a class="btn btn-primary btn-lg" href="http://www.hackpoly.com" role="button" target="_blank">Learn more</a></p>
+	    		</div>
+    		</div>
+    	</div>
+    </div>
+
+    <div class="bsc cust-pad">
+    	<div class="container">
+    		<div class="row">
+	    		<div class="col-md-8">
+          <p>Bronco Startup Challenge is Cal Poly Pomona's annual event put on by Poly Founders. It's a 2-minute startup pitch competition that rewards students with over $10,000 in cash.</p>
+	    		</div>
+          <br>
+	    		<div class="col-md-4 text-center">
+	    		<p><a class="btn btn-primary btn-lg" href="http://register.polyfounders.com" role="button" target="_blank">Learn more</a></p>
 	    		</div>
     		</div>
     	</div>
