--- a/index.html
+++ b/index.html
@@ -34,25 +34,46 @@
     </nav>
 
 
-		<div class="jumbotron text-center">
-      <div class="container">
-        <h1>Join fellow entrepreneurs.</h1>
-        <a href="http://eepurl.com/ucOy1" class="btn btn-primary btn-lg" target="_blank">Subscribe</a>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="images/group2.jpg" alt="">
+      <div class="carousel-caption">
+      	<h3>Welcome to the Official Poly Founders website </h3>
       </div>
     </div>
-
-    <div class="welcome text-center cust-pad">
-    	<div class="container">
-    		<div class="row">
-    			<div class="col-md-8">
-    			<h3>Welcome to the Official Poly Founders website.</h3>
-    			</div>
-    			<div class="col-md-4">
-    			<p>Our meetings are every Thursday<br>NOON @ 163-1004</p>
-    			</div>
-    		</div>
-    	</div>
+    <div class="item">
+      <img src="images/hackpoly.jpg" alt="...">
+      <div class="carousel-caption">
+      	<h3>Poly Founders puts on Hackpoly</h3>
+      </div>
     </div>
+    <div class="item">
+      <img src="images/about.jpg" alt="...">
+      <div class="carousel-caption">
+      	<h3>We are a group of entrepreneurs</h3>
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div> <!-- Carousel -->
+
+
 
 
     <div class="feature text-center">
@@ -93,9 +114,13 @@
     <div class="about text-center" id="about">
     	<div class="container">
     		<div class="row">
-    			<h2>Our Story</h2>
-    			<p>Founded in January 2012, Poly Founders was created with the purpose of connecting young entrepreneurs of all backgrounds under a common roof. While Cal Poly Pomona is our home, we welcome students, alumni, and professionals from all universities and organizations.
+    			<div class="col-md-3 col-md-offset-1">
+    			<h2>Our story began in 2012</h2>
+    			</div>
+    			<div class="col-md-7 col-md-offset-1">
+    			<p>Poly Founders was created with the purpose of connecting young entrepreneurs of all backgrounds under a common roof. While Cal Poly Pomona is our home, we welcome students, alumni, and professionals from all universities and organizations.
           Poly Founders works with budding entrepreneurs, exceptional students, and prominent professors in order to unite the worlds of entrepreneurship, academia, and industry. We help entrepreneurs by offering our resources, knowledge, and network.</p>
+          </div>
     		</div>
     	</div>
     </div>
@@ -122,7 +147,7 @@
 	    		</div>
           <br>
 	    		<div class="col-md-4 text-center">
-	    		<p><a class="btn btn-primary btn-lg" href="http://register.polyfounders.com" role="button" target="_blank">Learn more</a></p>
+	    		<p><a class="btn btn-primary btn-lg" href="http://register.polyfounders.com" role="button" target="_blank">Sign Me Up!</a></p>
 	    		</div>
     		</div>
     	</div>
@@ -131,19 +156,8 @@
     <div class="events">
     	<div class="container">
     		<div class="row">
-    			<h2>Recent Blog Posts</h2>
-    			<div class="col-md-3">
-	    		<h2>Post #1</h2>
-	    		</div>
-	    		<div class="col-md-3">
-	    		<h2>#2</h2>
-	    		</div>
-	    		<div class="col-md-3">
-	    		<h2>#3</h2>
-	    		</div>
-	    		<div class="col-md-3">
-	    		<h2>Upcoming Events</h2>
-	    		</div>
+    			<h3>Upcoming Events</h3>
+
     		</div>
     	</div>
     </div>
