--- a/index.html
+++ b/index.html
@@ -125,10 +125,20 @@
     	</div>
     </div>
 
+    <div class="events">
+    	<div class="container">
+    		<div class="row">
+    			<h3>Upcoming Events</h3>
+
+    		</div>
+    	</div>
+    </div>
+
     <div class="hackpoly cust-pad">
     	<div class="container">
     		<div class="row">
 	    		<div class="col-md-8">
+          <h3>HACKPOLY - DATE TBA</h3>
 	    		<p>Hackpoly is Cal Poly Pomona's annual hackathon put on by Poly Founders. It is a 24-hour programming competition to build anything.</p>
 	    		</div>
           <br>
@@ -143,6 +153,7 @@
     	<div class="container">
     		<div class="row">
 	    		<div class="col-md-8">
+          <h3>BRONCO STARTUP CHALLENGE - DATE TBA</h3>
           <p>Bronco Startup Challenge is Cal Poly Pomona's annual event put on by Poly Founders. It's a 2-minute startup pitch competition that rewards students with over $10,000 in cash.</p>
 	    		</div>
           <br>
@@ -153,14 +164,6 @@
     	</div>
     </div>
 
-    <div class="events">
-    	<div class="container">
-    		<div class="row">
-    			<h3>Upcoming Events</h3>
-
-    		</div>
-    	</div>
-    </div>
 
  	 	<div class="footer cust-pad">
  	 		<div class="container">
