--- a/index.html
+++ b/index.html
@@ -123,12 +123,18 @@
     	</div>
     </div>
 
-
-    <div class="events">
+    <div class="events cust-pad text-center">
     	<div class="container">
     		<div class="row">
-    			<h3>Upcoming Events</h3>
-
+					<h3>Upcoming Events</h3>
+    			<div class="col-sm-9 col-sm-offset-3">
+	    			<dl>
+		    			<dt>General Meetings:&nbsp;</dt>
+		    			<dd>Every Thursday @ NOON in room 163-1004</dd>
+		    			<dt>E-Board Meetings:&nbsp;</dt>
+		    			<dd>E-board meetings are every Tuesday (Ask an e-board member for more information.)</dd>
+	    			</dl>
+    			</div>
     		</div>
     	</div>
     </div>
