comment out blog

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#">Events</a></li>
-            <li><a href="#">Blog</a></li>
+            <!--<li><a href="#">Blog</a></li>-->
             <li><a href="mailto:info@polyfounders.com">Contact</a></li>
           </ul>
         </div>
