use event anchor

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="#events">Events</a></li>
             <!--<li><a href="#">Blog</a></li>-->
             <li><a href="mailto:info@polyfounders.com">Contact</a></li>
           </ul>
@@ -123,7 +123,7 @@
     	</div>
     </div>
 
-    <div class="events cust-pad text-center">
+    <div class="events cust-pad text-center" id="events">
     	<div class="container">
     		<div class="row">
 					<h3>Upcoming Events</h3>
