added social media icons

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="mailto:info@polyfounders.com">Contact</a></li>
+            <li><a href="#events">Events</a></li>
+            <!-- <li><a href="#">Blog</a></li> -->
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -169,6 +169,19 @@
     	</div>
     </div>
 
+    <div class="contact cust-pad text-center" id="contact">
+    	<div class="container">
+    		<div class="row">
+    			<div class="col-md-6 col-md-offset-3">
+    			<p>Got ideas or questions? Reach out to us:</p>
+    			<a href="http://www.facebook.com/polyfounders"><i class="fa fa-facebook fa-2x"></i></a>
+    			<a href="http://www.twitter.com/polyfounders"><i class="fa fa-twitter fa-2x"></i></a>
+    			<a href="http://www.instagram.com/polyfounders"><i class="fa fa-instagram fa-2x"></i></a>
+    			<a href="http://www.github.com/polyfounders"><i class="fa fa-github fa-2x"></i></a>
+    			</div>
+    		</div>
+    	</div>
+    </div>
 
  	 	<div class="footer cust-pad">
  	 		<div class="container">
