--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
     			<div class="col-md-6 col-md-offset-3">
     			<p>Got ideas or questions? Reach out to us:</p>
     			<a href="mailto:info@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
-    			<a href="http://www.facebook.com/polyfounders"><i class="fa fa-facebook fa-2x"></i></a>
-    			<a href="http://www.twitter.com/polyfounders"><i class="fa fa-twitter fa-2x"></i></a>
-    			<a href="http://www.instagram.com/polyfounders"><i class="fa fa-instagram fa-2x"></i></a>
-    			<a href="http://www.github.com/polyfounders"><i class="fa fa-github fa-2x"></i></a>
+    			<a href="http://www.facebook.com/polyfounders" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+    			<a href="http://www.twitter.com/polyfounders" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+    			<a href="http://www.instagram.com/polyfounders" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+    			<a href="http://www.github.com/polyfounders" target="_blank"><i class="fa fa-github fa-2x"></i></a>
     			</div>
     		</div>
     	</div>
