--- a/index.html
+++ b/index.html
@@ -95,28 +95,28 @@
             <div class="overlay"></div>
             <h2>Learn</h2>
             <p>
-            We teach you the basics for what it takes to be an entrepreneur. From starting your business from the ground up to pitching to investors to finding the ideal co-founders, we have the resources to help.
+              We teach you the basics for what it takes to be an entrepreneur. From starting your business from the ground up to pitching to investors to finding the ideal co-founders, we have the resources to help.
             </p>
 	    		</div>
 	    		<div class="col-sm-3 four-pts" id="network-block">
             <div class="overlay"></div>
             <h2>Network</h2>
             <p>
-            Your Network is your Net Worth. We at Poly Founders have a vast network of CEO's, Founders, Entrepreneurs, VP's of Fortune 500 companies and Investors. Ask us, we will connect the dots for you.
+              Your Network is your Net Worth. We at Poly Founders have a vast network of CEO's, Founders, Entrepreneurs, VP's of Fortune 500 companies and Investors. Ask us, we will connect the dots for you.
             </p>
 	    		</div>
 	    		<div class="col-sm-3 four-pts" id="do-block">
             <div class="overlay"></div>
             <h2>Innovate</h2>
             <p>
-            Be disruptive. We organize Hackpoly, a 24 hour event where students from all over get together and collaboratively create a product like an app or website, and go on to pitch to successful entrepreneur and executives.
+              Be disruptive. We organize Hackpoly, a 24 hour event where students from all over get together and collaboratively create a product like an app or website, and go on to pitch to successful entrepreneurs and executives.
             </p>
 	    		</div>
 	    		<div class="col-sm-3 four-pts" id="hack-block">
             <div class="overlay"></div>
             <h2>Compete</h2>
             <p>
-            Have the next millionaire dollar idea? Come to our annual Bronco Startup Challenge where we have over $10,000 to give out.
+              Have the next million dollar idea? Come to our annual Bronco Startup Challenge where we have over $10,000 to give out.
             </p>
 	    		</div>
     		</div>
