--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 		  <!-- Wrapper for slides -->
 		  <div class="carousel-inner">
 		    <div class="item active">
-		      <img src="images/group2.jpg" alt="">
+		      <img id="idea-img" src="images/idea.png" alt="">
 		      <div class="carousel-caption">
-		      	<h3>Welcome to the Official Poly Founders website </h3>
+		      	<h3>Welcome to the official Poly Founders website </h3>
 		      </div>
 		    </div>
 		    <div class="item">
@@ -126,13 +126,13 @@
     <div class="events cust-pad text-center" id="events">
     	<div class="container">
     		<div class="row">
-					<h3>Upcoming Events</h3>
-    			<div class="col-sm-9 col-sm-offset-3">
+    			<div class="col-sm-10 col-sm-offset-1">
 	    			<dl>
-		    			<dt>General Meetings:&nbsp;</dt>
-		    			<dd>Every Thursday @ NOON in room 163-1004</dd>
-		    			<dt>E-Board Meetings:&nbsp;</dt>
-		    			<dd>E-board meetings are every Tuesday (Ask an e-board member for more information.)</dd>
+		    			<dt>General Meetings</dt>
+		    			<dd>Every Thursday @ NOON in room 163-1032</dd>
+              <br>
+		    			<dt>E-Board Meetings</dt>
+		    			<dd>E-board meetings are every Tuesday (Ask an e-board member)</dd>
 	    			</dl>
     			</div>
     		</div>
@@ -143,7 +143,7 @@
     	<div class="container">
     		<div class="row">
 	    		<div class="col-md-8">
-          <h3>HACKPOLY - DATE TBA</h3>
+          <h3>HACKPOLY - FEBRUARY 2016</h3>
 	    		<p>Hackpoly is Cal Poly Pomona's annual hackathon put on by Poly Founders. It is a 24-hour programming competition to build anything.</p>
 	    		</div>
           <br>
@@ -158,7 +158,7 @@
     	<div class="container">
     		<div class="row">
 	    		<div class="col-md-8">
-          <h3>BRONCO STARTUP CHALLENGE - DATE TBA</h3>
+          <h3>BRONCO STARTUP CHALLENGE - MAY 2016</h3>
           <p>Bronco Startup Challenge is Cal Poly Pomona's annual event put on by Poly Founders. It's a 2-minute startup pitch competition that rewards students with over $10,000 in cash.</p>
 	    		</div>
           <br>
