--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		    </div>
 		    <div class="item">
 		      <img src="images/hackpoly.jpg" alt="...">
-		      <div class="carousel-caption">
+		      <div class="carousel-caption hackpoly-caption">
 		      	<h3>Poly Founders puts on Hackpoly</h3>
 		      </div>
 		    </div>
