--- a/index.html
+++ b/index.html
@@ -88,88 +88,89 @@
     	</div>
     </div>
 
-		<div class="feature text-center">
-    	<div class="container-fluid">
-    		<div class="row">
-	    		<div class="col-sm-3 four-pts" id="learn-block">
+<div class="feature text-center">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-3 four-pts" id="learn-block">
             <div class="overlay"></div>
             <h2>Learn</h2>
             <p>
               We teach you the basics for what it takes to be an entrepreneur. From starting your business from the ground up to pitching to investors to finding the ideal co-founders, we have the resources to help.
             </p>
-	    		</div>
-	    		<div class="col-sm-3 four-pts" id="network-block">
+          </div>
+          <div class="col-sm-3 four-pts" id="network-block">
             <div class="overlay"></div>
             <h2>Network</h2>
             <p>
               Your Network is your Net Worth. We at Poly Founders have a vast network of CEO's, Founders, Entrepreneurs, VP's of Fortune 500 companies and Investors. Ask us, we will connect the dots for you.
             </p>
-	    		</div>
-	    		<div class="col-sm-3 four-pts" id="do-block">
+          </div>
+          <div class="col-sm-3 four-pts" id="do-block">
             <div class="overlay"></div>
             <h2>Innovate</h2>
             <p>
               Be disruptive. We organize Hackpoly, a 24 hour event where students from all over get together and collaboratively create a product like an app or website, and go on to pitch to successful entrepreneurs and executives.
             </p>
-	    		</div>
-	    		<div class="col-sm-3 four-pts" id="hack-block">
+          </div>
+          <div class="col-sm-3 four-pts" id="hack-block">
             <div class="overlay"></div>
             <h2>Compete</h2>
             <p>
               Have the next million dollar idea? Come to our annual Bronco Startup Challenge where we have over $10,000 to give out.
             </p>
-	    		</div>
-    		</div>
-    	</div>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="events cust-pad text-center" id="events">
+    <div class="events" id="events">
     	<div class="container">
+      <h2>Our Events</h2>
     		<div class="row">
-    			<div class="col-sm-10 col-sm-offset-1">
-	    			<dl>
-		    			<dt>General Meetings</dt>
-		    			<dd>Every Thursday @ NOON in room 163-2004</dd>
-              <br>
-		    			<dt>E-Board Meetings</dt>
-		    			<dd>E-board meetings are every Tuesday (Ask an e-board member)</dd>
-	    			</dl>
-    			</div>
+          <div class="col-md-4 text-center">
+            <div id="square1" class="cust-pad">
+              <div class="col-md-12">
+                <p><h3>General Meetings</h3>Every Thursday @ NOON in room 163-2004</p><br>
+                <p><h3>E-Board Meetings</h3>E-board meetings are every Tuesday (Ask an e-board member)</p><br>
+              <div class="col-md-12">
+                <p>Got ideas or questions? Reach out to us:</p>
+                <a href="mailto:info@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
+                <a href="http://www.facebook.com/polyfounders" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+                <a href="http://www.twitter.com/polyfounders" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+                <a href="http://www.instagram.com/polyfounders" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+                <a href="http://www.github.com/polyfounders" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+              </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 text-center">
+            <div id="square">
+              <div class="col-md-12 cust-pad">
+                <h3>HACKPOLY <br>FEBRUARY 2016</h3>
+                <br><br>
+                <p>Hackpoly is Cal Poly Pomona's annual hackathon put on by Poly Founders. It is a 24-hour programming competition to build anything.</p>
+                <br><br><br>
+                <p><a class="btn btn-primary btn-lg" href="http://www.hackpoly.com" role="button" target="_blank">Learn more</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 text-center">
+            <div id="square2">
+              <div class="col-md-12 cust-pad">
+                <h3>BRONCO STARTUP CHALLENGE<br>MAY 2016</h3>
+                <br>
+                <p>Bronco Startup Challenge is Cal Poly Pomona's annual event put on by Poly Founders. It's a 2-minute startup pitch competition that rewards students with over $10,000 in cash.</p>
+                <br><br>
+                <p><a class="btn btn-primary btn-lg" href="http://register.polyfounders.com" role="button" target="_blank">Sign Me Up!</a></p>
+              </div>
+            </div>
+          </div>
+
     		</div>
     	</div>
     </div>
 
-    <div class="hackpoly cust-pad">
-    	<div class="container">
-    		<div class="row">
-	    		<div class="col-md-8">
-          <h3>HACKPOLY - FEBRUARY 2016</h3>
-	    		<p>Hackpoly is Cal Poly Pomona's annual hackathon put on by Poly Founders. It is a 24-hour programming competition to build anything.</p>
-	    		</div>
-          <br>
-	    		<div class="col-md-4 text-center">
-	    		<p><a class="btn btn-primary btn-lg" href="http://www.hackpoly.com" role="button" target="_blank">Learn more</a></p>
-	    		</div>
-    		</div>
-    	</div>
-    </div>
-
-    <div class="bsc cust-pad">
-    	<div class="container">
-    		<div class="row">
-	    		<div class="col-md-8">
-          <h3>BRONCO STARTUP CHALLENGE - MAY 2016</h3>
-          <p>Bronco Startup Challenge is Cal Poly Pomona's annual event put on by Poly Founders. It's a 2-minute startup pitch competition that rewards students with over $10,000 in cash.</p>
-	    		</div>
-          <br>
-	    		<div class="col-md-4 text-center">
-	    		<p><a class="btn btn-primary btn-lg" href="http://register.polyfounders.com" role="button" target="_blank">Sign Me Up!</a></p>
-	    		</div>
-    		</div>
-    	</div>
-    </div>
-
-    <div class="contact cust-pad text-center" id="contact">
+<!--     <div class="contact cust-pad text-center" id="contact">
     	<div class="container">
     		<div class="row">
     			<div class="col-md-6 col-md-offset-3">
@@ -182,7 +183,7 @@
     			</div>
     		</div>
     	</div>
-    </div>
+    </div> -->
 
  	 	<div class="footer cust-pad">
  	 		<div class="container">
