fixed navbar, remove github, fix pics

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		      </div>
 		    </div>
 		    <div class="item">
-		      <img src="images/about.jpg" alt="...">
+		      <img src="images/newimg.jpg" alt="...">
 		      <div class="carousel-caption">
 		      	<h3>We are a group of entrepreneurs</h3>
 		      </div>
@@ -134,11 +134,10 @@
                 <p><h3>E-Board Meetings</h3>E-board meetings are every Tuesday (Ask an e-board member)</p><br>
               <div class="col-md-12">
                 <p>Got ideas or questions? Reach out to us:</p>
-                <a href="mailto:info@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
+                <a href="mailto:simal@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
                 <a href="http://www.facebook.com/polyfounders" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
                 <a href="http://www.twitter.com/polyfounders" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
                 <a href="http://www.instagram.com/polyfounders" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-                <a href="http://www.github.com/polyfounders" target="_blank"><i class="fa fa-github fa-2x"></i></a>
               </div>
               </div>
             </div>
