--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
             <li><a id="events" href="events.html">Events</a></li>
             <!-- <li><a href="#">Blog</a></li> -->
             <li><a id="contact" href="contact.html">Contact</a></li>
+            <li class="box"><a href="http://eepurl.com/ucOy1">Subscribe</a></li>
           </ul>
         </div>
       </div>
