--- a/events.html
+++ b/events.html
@@ -28,6 +28,7 @@
             <li><a id="events" href="events.html">Events</a></li>
             <!-- <li><a href="#">Blog</a></li> -->
             <li><a id="contact" href="contact.html">Contact</a></li>
+            <li class="box"><a href="http://eepurl.com/ucOy1">Subscribe</a></li>
           </ul>
         </div>
       </div>
@@ -92,7 +93,7 @@ Room 163-2004 (College of Business), be there.</div>
           </div>
         </div>
           <div class="col-md-12">
-          <div class="name" align="center">Upcoming Events</div>
+          <div class="top" align="center">Upcoming Events</div>
           </div>
           <div data-tockify-component="calendar" data-tockify-calendar="camille.nibungco"></div>
 <script data-tockify-script="embed" src="https://public.tockify.com/browser/embed.js"></script>
