--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="events.html">Events</a></li>
             <!-- <li><a href="#">Blog</a></li> -->
             <li><a href="contact.html">Contact</a></li>
+            <li class="box"><a href="http://eepurl.com/ucOy1">Subscribe</a></li>
           </ul>
         </div>
       </div>
@@ -35,6 +36,7 @@
 
 <div class="splash">
     <div class="image">
+        http://i.imgur.com/Dl6oB0E.gifv
       <img src="images/lightbulb.png">
    <div class="idea">What's <br/> Your <br/> Idea &#63;</div>
         </div>
@@ -44,8 +46,8 @@
     <div class="about text-center" id="about">
     	<div class="container">
     		<div class="row">
-    			<h2>WHAT IS A POLY FOUNDER?</h2>
-    			<p><span class="fancy">poly founder</span>- A student who wants to make a difference in the world. Lorem ipsum dolor sit amet, ut putant quaerendum usu, ex vis meis rebum meliore. Dicunt posidonium his at. Cu cum platonem sententiae, ea mei suas wisi adipisci. Veri meliore fuisset ex mel, quot eius lorem vel id. Eam accusata atomorum adversarium id. Mutat essent vidisse an duo, et pri vidit solet vocent, stet accusata conceptam usu in.
+    			<h2>WHAT IS POLY FOUNDERS?</h2>
+    			<p><span class="fancy">Poly Founders</span>- A multidisciplinary student organization based at Cal Poly Pomona that encourages entrepreneurship and innovation through by providing our members with the knowledge, network, and resources to change the world. We also organize some of the biggest innovative and groundbreaking events at Cal Poly Pomona including <a href="http://hackpoly.com" target="_blank">HackPoly</a> and the Bronco Startup Challenge. We meet every Thursday at U-hour(12-1PM) in Building 163-2004.
 </p>
           </div>
     		</div>
@@ -89,7 +91,7 @@
     	<div class="container">
     		<div class="row">
     			<h2>ARE YOU A POLY FOUNDER?</h2>
-    			<div class="btn">SIGN UP</div>
+    			<div class="btn"><a href="http://eepurl.com/ucOy1">SIGN UP</a></div>
           </div>
     		</div>
     	</div>
