--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
             <li><a id="events" href="events.html">Events</a></li>
             <!-- <li><a href="#">Blog</a></li> -->
             <li><a id="contact" href="contact.html">Contact</a></li>
+            <li class="box"><a href="http://eepurl.com/ucOy1">Subscribe</a></li>
           </ul>
         </div>
       </div>
@@ -45,45 +46,51 @@
         <p class="description">The Poly Founders E-board is a multidisciplinary group of students varying from Finance to Computer Engineering. Students run every year for their desired position. <br/>Interested in a position? Contact us!</p>
         <div class="photos">
           <div id="Simal" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"><a href="mailto:simal@polyfounders.com"></a></div>
-            <a href="mailto:simal@polyfounders.com"><div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
-              <div>simal@polyfounders.com</div>
+            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
+            <div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
+              <div><a href="mailto:simal@polyfounders.com">Simal<br>President</a></div>
             </div>
           </div>
         <div id="Lung" class="single-member">
             <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
-              <div>rushi@polyfounders.com</div>
+              <div><a href="mailto:rushi@polyfounders.com">Rushi<br>Vice President</a></div>
             </div>
           </div>
         <div id="Kim" class="single-member">
             <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div>camille@polyfounders.com</div>
+              <div><a href="mailto:camille@polyfounders.com">Camille<br>VP of Operations</a></div>
             </div>
           </div>
             <div id="Kim" class="single-member">
             <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div>tony@polyfounders.com</div>
+              <div><a href="mailto:tony@polyfounders.com">Tony<br>VP of Tech</a></div>
+            </div>
+          </div>
+              <div id="Kim" class="single-member">
+            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
+            <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
+              <div><a href="mailto:nick@polyfounders.com">Nick<br>VP of Marketing</a></div>
             </div>
           </div>
             <div id="Kim" class="single-member">
             <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div>eric@polyfounders.com</div>
+              <div><a href="mailto:eric@polyfounders.com">Eric<br>Webmaster</a></div>
             </div>
           </div>
             <div id="Kim" class="single-member">
             <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div>amy@polyfounders.com</div>
+              <div><a href="mailto:amy@polyfounders.com">Amy<br>Advisor</a></div>
             </div>
           </div>
             <div id="Kim" class="single-member">
             <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div>austin@polyfounders.com</div>
+              <div><a href="mailto:austin@polyfounders.com">Austin<br>Advisor</a></div>
             </div>
           </div>
           </div>
