add officer pics

--- a/about.html
+++ b/about.html
@@ -46,51 +46,45 @@
         <p class="description">The Poly Founders E-board is a multidisciplinary group of students varying from Finance to Computer Engineering. Students run every year for their desired position. <br/>Interested in a position? Contact us!</p>
         <div class="photos">
           <div id="Simal" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
+            <div style="background-image:url(/images/simal.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
               <div><a href="mailto:simal@polyfounders.com">Simal<br>President</a></div>
             </div>
           </div>
         <div id="Lung" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
+            <div style="background-image:url(/images/rushi.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
               <div><a href="mailto:rushi@polyfounders.com">Rushi<br>Vice President</a></div>
             </div>
           </div>
         <div id="Kim" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
+            <div style="background-image:url(/images/camille.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
               <div><a href="mailto:camille@polyfounders.com">Camille<br>VP of Operations</a></div>
             </div>
           </div>
             <div id="Kim" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
+            <div style="background-image:url(/images/tony.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
               <div><a href="mailto:tony@polyfounders.com">Tony<br>VP of Tech</a></div>
             </div>
           </div>
               <div id="Kim" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
+            <div style="background-image:url(/images/nick.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
               <div><a href="mailto:nick@polyfounders.com">Nick<br>VP of Marketing</a></div>
             </div>
           </div>
             <div id="Kim" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
+            <div style="background-image:url(/images/ana.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div><a href="mailto:eric@polyfounders.com">Eric<br>Webmaster</a></div>
+              <div><a href="mailto:ana@polyfounders.com">Ana<br>Corporate Relations</a></div>
             </div>
           </div>
             <div id="Kim" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
+            <div style="background-image:url(/images/ali.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div><a href="mailto:amy@polyfounders.com">Amy<br>Advisor</a></div>
-            </div>
-          </div>
-            <div id="Kim" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
-            <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div><a href="mailto:austin@polyfounders.com">Austin<br>Advisor</a></div>
+              <div><a href="mailto:ali@polyfounders.com">Ali<br>UBSS Representative</a></div>
             </div>
           </div>
           </div>
