officer pics + calendar

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
             <div id="Kim" class="single-member">
             <div style="background-image:url(/images/tony.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div><a href="mailto:tony@polyfounders.com">Tony<br>VP of Tech</a></div>
+              <div><a href="mailto:tony@polyfounders.com">Tony<br>Treasurer</a></div>
             </div>
           </div>
               <div id="Kim" class="single-member">
@@ -84,7 +84,7 @@
             <div id="Kim" class="single-member">
             <div style="background-image:url(/images/ali.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div><a href="mailto:ali@polyfounders.com">Ali<br>UBSS Representative</a></div>
+              <div><a href="mailto:ali@polyfounders.com">Ali<br>Member Relations</a></div>
             </div>
           </div>
           </div>
