--- a/about.html
+++ b/about.html
@@ -76,15 +76,52 @@
             </div>
           </div>
             <div id="Kim" class="single-member">
-            <div style="background-image:url(/images/ana.jpg)" class="photo"></div>
-            <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div><a href="mailto:ana@polyfounders.com">Ana<br>Corporate Relations</a></div>
-            </div>
-          </div>
-            <div id="Kim" class="single-member">
             <div style="background-image:url(/images/ali.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
               <div><a href="mailto:ali@polyfounders.com">Ali<br>Member Relations</a></div>
+            </div>
+          </div>
+          </div>
+        </div>
+      </section>
+      
+      <section class="ourteam">
+        <h2>ADVISORS &amp; PARTNERS:</h2>
+        <div class="photos">
+            <div id="Sonya" class="single-member">
+            <div style="background-image:url(/images/sonya.jpg)" class="photo"></div>
+            <div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
+              <div><a href="mailto:xszhang@cpp.edu">Dr. Zhang<br>Advisor</a></div>
+            </div>
+          </div>
+            <div id="Edmond" class="single-member">
+            <div style="background-image:url(/images/wu.jpg)" class="photo"></div>
+            <div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
+              <div><a href="mailto:edmondwu@cpp.edu">Edmond Wu<br>Advisor</a></div>
+            </div>
+          </div>
+            <div id="Simal" class="single-member">
+            <div style="background-image:url(/images/pizarro.jpg)" class="photo"></div>
+            <div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
+              <div><a href="mailto:npizarro@cpp.edu">Dr. Pizarro<br>Advisor</a></div>
+            </div>
+          </div>
+          <div id="Simal" class="single-member">
+            <div style="background-image:url(/images/asad.jpg)" class="photo"></div>
+            <div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
+              <div><a href="mailto:afchishty@cpp.edu">Asad<br>Partner</a></div>
+            </div>
+          </div>
+        <div id="Lung" class="single-member">
+            <div style="background-image:url(/images/alberto.jpg)" class="photo"></div>
+            <div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
+              <div><a href="mailto:albertorodriguezgarcia10@gmail.com">Alberto<br>Partner</a></div>
+            </div>
+          </div>
+        <div id="Kim" class="single-member">
+            <div style="background-image:url(/images/patrick.jpg)" class="photo"></div>
+            <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
+              <div><a href="mailto:pykan@cpp.edu">Patrick<br>Partner</a></div>
             </div>
           </div>
           </div>
