--- a/events.html
+++ b/events.html
@@ -37,21 +37,21 @@
 <div id="content" class="content">
       <div class="container events">
         <div class="col-md-6 gutter">
-          <div id="/events/1000-pitches.html" class="event">
+          <div id="" class="event"><a href="http://hackpoly.com" target="_blank">
             <div class="name" align="center">HackPoly</div>
             <div class="oneliner">Hackpoly is Cal Poly Pomona's annual collegiate hackathon put on by Poly Founders. It is a 24-hour software and hardware competition to build anything.</div>
             <div class="image">
               <div style="background-image:url(/images/hackpoly.jpg)" class="image-inner"></div>
-            </div>
+            </div></a>
           </div>
         </div>
         <div class="col-md-6 gutter">
-          <div id="/events/arts-grooves-foods.html" class="event">
+          <div id="" class="event"><a href="http://broncostartupchallenge.com" target="_blank">
             <div class="name">Bronco Startup Challenge</div>
-            <div class="oneliner">Bronco Startup Challenge is Cal Poly Pomona's annual event put on by Poly Founders. It's a 2-minute startup pitch competition that rewards students with over $10,000 in cash.</div>
+            <div class="oneliner">Bronco Startup Challenge is Cal Poly Pomona's annual event put on by Poly Founders. It's a 2-month business building competition that rewards students with over $10,000 in cash.</div>
             <div class="image">
               <div style="background-image:url(/images/group.jpg)" class="image-inner"></div>
-            </div>
+              </div></a>
           </div>
         </div>
         <div class="col-md-3 gutter">
@@ -77,7 +77,7 @@
           <div id="/events/techla.html" class="event">
             <div class="name">General Meetings</div>
             <div class="oneliner">We meet every THURSDAY 12pm-1pm
-Room 163-2004 (College of Business), be there.</div>
+Room 163-1010 (College of Business), be there.</div>
             <div class="image">
               <div style="background-image:url(/images/meeting.jpg)" class="image-inner"></div>
             </div>
