--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     	<div class="container">
     		<div class="row">
     			<h2>WHAT IS POLY FOUNDERS?</h2>
-    			<p><span class="fancy">Poly Founders</span>- A multidisciplinary student organization based at Cal Poly Pomona that encourages entrepreneurship and innovation through by providing our members with the knowledge, network, and resources to change the world. We also organize some of the biggest innovative and groundbreaking events at Cal Poly Pomona including <a href="http://hackpoly.com" target="_blank">HackPoly</a> and the Bronco Startup Challenge. We meet every Thursday at U-hour(12-1PM) in Building 163-1010.
+                <p><span class="fancy">Poly Founders</span>- A multidisciplinary student organization based at Cal Poly Pomona that encourages entrepreneurship and innovation through by providing our members with the knowledge, network, and resources to change the world. We also organize some of the biggest innovative and groundbreaking events at Cal Poly Pomona including <a href="http://hackpoly.com" target="_blank">HackPoly</a> and the <a href="http://broncostartupchallenge.com" target="_blank">Bronco Startup Challenge</a>. We meet every Thursday at U-hour(12-1PM) in Building 163-2015.
 </p>
           </div>
     		</div>
@@ -155,7 +155,7 @@
  	 	<div class="footer cust-pad">
  	 		<div class="container">
  	 			<div class="copyright">
- 	 			<p>© 2015 POLY FOUNDERS | MAKING AWESOME HAPPEN.</p>
+ 	 			<p>© 2016 POLY FOUNDERS | MAKING AWESOME HAPPEN.</p>
                 <a href="mailto:simal@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
     			<a href="http://www.facebook.com/polyfounders" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
     			<a href="http://www.twitter.com/polyfounders" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
