removed tony, zhang, and hack nights

--- a/about.html
+++ b/about.html
@@ -63,12 +63,12 @@
               <div><a href="mailto:camille@polyfounders.com">Camille<br>VP of Operations</a></div>
             </div>
           </div>
-            <div id="Kim" class="single-member">
+            <!--<div id="Kim" class="single-member">
             <div style="background-image:url(/images/tony.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
               <div><a href="mailto:tony@polyfounders.com">Tony<br>Treasurer</a></div>
             </div>
-          </div>
+          </div>-->
               <div id="Kim" class="single-member">
             <div style="background-image:url(/images/nick.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
@@ -88,12 +88,12 @@
       <section class="ourteam">
         <h2>ADVISORS &amp; PARTNERS:</h2>
         <div class="photos">
-            <div id="Sonya" class="single-member">
+           <!-- <div id="Sonya" class="single-member">
             <div style="background-image:url(/images/sonya.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
               <div><a href="mailto:xszhang@cpp.edu">Dr. Zhang<br>Advisor</a></div>
             </div>
-          </div>
+          </div>-->
             <div id="Edmond" class="single-member">
             <div style="background-image:url(/images/wu.jpg)" class="photo"></div>
             <div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
