--- a/events.html
+++ b/events.html
@@ -64,7 +64,7 @@
           </div>
         </div>
         
-        <div class="col-md-3 gutter">
+        <!--<div class="col-md-3 gutter">
           <div id="/events/startup-career-fair.html" class="event">
             <div class="name">Hack Nights</div>
             <div class="oneliner">We host a quarterly competition where members make products in order to get their hands dirty as well as bond together as the Poly Founder community.</div>
@@ -72,7 +72,7 @@
               <div style="background-image:url(/images/hacknight.jpg)" class="image-inner"></div>
             </div>
           </div>
-        </div>
+        </div>-->
         <div class="col-md-3 gutter">
           <div id="/events/techla.html" class="event">
             <div class="name">General Meetings</div>
