updated gh pages with pics and info

--- a/events.html
+++ b/events.html
@@ -109,7 +109,7 @@ Room 163-1010 (College of Business), be there.</div>
       <div class="footer cust-pad">
  	 		<div class="container">
  	 			<div class="copyright">
- 	 			<p>© 2016 POLY FOUNDERS | MAKING AWESOME HAPPEN.</p>
+ 	 			<p>© 2017 POLY FOUNDERS | MAKING IDEAS HAPPEN.</p>
                 <a href="mailto:simal@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
     			<a href="http://www.facebook.com/polyfounders" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
     			<a href="http://www.twitter.com/polyfounders" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
