--- a/contact.html
+++ b/contact.html
@@ -37,13 +37,13 @@
       <img class="back" src="images/contact.jpg">
       <div class="text">
           <p>Any questions, comments, suggestions, or crazy ideas?<p>
-          <p><a href="mailto:simal@polyfounders.com">Drop us a line</a></p>
+          <p><a href="mailto:rushi@polyfounders.com">Drop us a line</a></p>
           </div>
       </div>
  	 <div class="footer cust-pad">
  	 		<div class="container">
  	 			<div class="copyright">
- 	 			<p>© 2016 POLY FOUNDERS | MAKING AWESOME HAPPEN.</p>
+ 	 			<p>© 2017 POLY FOUNDERS | MAKING IDEAS HAPPEN.</p>
                 <a href="mailto:simal@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
     			<a href="http://www.facebook.com/polyfounders" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
     			<a href="http://www.twitter.com/polyfounders" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
