--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
             <div class="overlay"></div>
             <h2>Innovate</h2>
             <p class="info">
-              Be disruptive. We organize Hackpoly, a 24 hour event where students from all over get together and collaboratively create a product like an app or website, and go on to pitch to successful entrepreneurs and executives.
+              Be disruptive. We organize <a href="http://hackpoly.com" target="_blank">Hackpoly</a>, a 24 hour event where students from all over get together and collaboratively create a product like an app or website, and go on to pitch to successful entrepreneurs and executives.
             </p>
           </div>
           <div class="col-sm-3 four-pts" id="hack-block">
             <div class="overlay"></div>
             <h2>Compete</h2>
             <p class="info">
-              Have the next million dollar idea? Come to our annual Bronco Startup Challenge where we have over $10,000 to give out.
+                Have the next million dollar idea? Come to our annual <a href="http://broncostartupchallenge.com" target="_blank">Bronco Startup Challenge</a> where we have over $10,000 to give out.
             </p>
           </div>
         </div>
@@ -155,7 +155,7 @@
  	 	<div class="footer cust-pad">
  	 		<div class="container">
  	 			<div class="copyright">
- 	 			<p>© 2016 POLY FOUNDERS | MAKING AWESOME HAPPEN.</p>
+ 	 			<p>© 2017 POLY FOUNDERS | MAKING IDEAS HAPPEN.</p>
                 <a href="mailto:simal@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
     			<a href="http://www.facebook.com/polyfounders" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
     			<a href="http://www.twitter.com/polyfounders" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
